# jffi

./: .gitignore  aclocal.m4  config.h.in  configure  configure.ac  pom.xml
libjffi/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
libjffi/src/: Makefile.am  Makefile.in  jffi.c  jffi.h  jnr_jffi_spi_AbstractPosixLibraryLoader.c  jnr_jffi_spi_ByteMemory.c  jnr_jffi_spi_Memory.c  jnr_jffi_spi_PosixLibraryLoaderImpl.c  jnr_jffi_spi_function_NativeCall_I__I__Impl.c
libjffijnitests/: Makefile.am  Makefile.in  configure  configure.ac
libjffijnitests/src/: Makefile.am  Makefile.in  jffi_jni_tests.c  jffi_jni_tests.h  jnr_jffi_benchmark_IntAddressArgIntArgs.c  jnr_jffi_benchmark_IntAddressArgLongArgs.c  jnr_jffi_benchmark_IntAddressFieldIntArgs.c  jnr_jffi_benchmark_IntAddressFieldLongArgs.c  jnr_jffi_benchmark_LongAddressArgIntArgs.c  jnr_jffi_benchmark_LongAddressArgLongArgs.c  jnr_jffi_benchmark_LongAddressFieldIntArgs.c  jnr_jffi_benchmark_LongAddressFieldLongArgs.c
libjffitests/: Makefile.in  config.h.in  configure  configure.ac
libjffitests/src/: Makefile.am  Makefile.in  NativeCall_I__I.c  jffitests.h
src/main/java/com/kenai/jffi/: Foreign.java  IntRef.java  LongRef.java  Main.java  ObjectBuffer.java  ObjectParameterInvoker.java  ObjectParameterStrategy.java  Platform.java
src/main/java/com/kenai/jffi/internal/: StubLoader.java
src/main/java/jnr/jffi/: LibToolVersion.java  LibraryBundle.java  LibraryLoader.java
src/main/java/jnr/jffi/function/: Function.java  JavaCall_I__CharSequence_I.java  JavaCall_I__I.java  JavaCall_I__I_CharSequence_I.java  JavaCall_I__I_I_L.java  JavaCall_I__I_L.java  JavaCall_I__I_L_L.java  JavaCall_I__I_L_L_I.java  JavaCall_I__StructArray_L_I.java
src/main/java/jnr/jffi/memory/: ByteMemory.java  Memory.java  StructArray.java  Structure.java
src/main/java/jnr/jffi/posix/: PosixType.java
src/main/java/jnr/jffi/spi/: AbstractLibraryLoader.java  AbstractPosixLibraryLoader.java  ByteMemory.java  Memory.java  OpaquePointer.java  PosixLibraryLoaderImpl.java
src/main/java/jnr/jffi/spi/function/: AbstractFunction.java  NativeCall_I__I_I_L__Impl.java  NativeCall_I__I_L__Impl.java  NativeCall_I__I_P_I__Impl.java  NativeCall_I__I__Impl.java  NativeCall_I__P_I__Impl.java  NativeCall_I__P_L_I__Impl.java
src/main/java/jnr/jffi/types/: IntRef.java  LongRef.java  NativeType.java  Pointer.java  Type.java  Void.java
src/main/native/: CallContext.c  Foreign.c  Makefile  Makefile.in
src/main/resources/: libjffi.la
src/main/resources/.libs/: libjffi.la  libjffi.lai  libjffi.so.0  libjffi.so.0.0.0
src/test/java/com/kenai/jffi/: ForeignTest.java  InvokerTest.java  UnitHelper.java
src/test/java/jnr/jffi/: JffiTestsImpl.java  JffiTestsInterface.java  NativeCall_I__I__Test.java  NativeCall_I__P_L_I__Test.java  PosixLibraryLoaderTest.java  TestByteMemory.java  TestStruct.java
src/test/java/jnr/jffi/benchmark/: CallIntVariantsBenchmarkTest.java  CallLongVariantsBenchmarkTest.java  IntAddress.java  IntAddressArgIntArgs.java  IntAddressArgLongArgs.java  IntAddressFieldIntArgs.java  IntAddressFieldLongArgs.java  IntBenchmarkTests.java  JffiJniTestsLibrary.java  LongAddress.java  LongAddressArgIntArgs.java  LongAddressArgLongArgs.java  LongAddressFieldIntArgs.java  LongAddressFieldLongArgs.java  LongBenchmarkTests.java
src/test/java/jnr/jffi/tags/: BenchmarkTest.java
src/test/native/: Makefile  Makefile.in  PointerTest.c
