lib_LTLIBRARIES = libjffi.la

AM_CPPFLAGS = @JNI_INCLUDE_FLAGS@ -I @JFFI_JNI_HEADER_DIR@

libjffi_la_SOURCES = \
 Exception.c \
 jffi.c \
 jnr_jffi_spi_ByteMemory.c \
 jnr_jffi_spi_Memory.h \
 jnr_jffi_spi_function_NativeCall_I__I__Impl.c \
 jnr_jffi_spi_AbstractPosixLibraryLoader.c \
 jnr_jffi_spi_PosixLibraryLoaderImpl.c

