lib_LTLIBRARIES = libjffijnitests.la

AM_CPPFLAGS = @JNI_INCLUDE_FLAGS@ -I @JFFI_JNI_TEST_HEADER_DIR@

libjffijnitests_la_LDFLAGS = -avoid-version

libjffijnitests_la_SOURCES = \
 jffi_jni_tests.c \
 jnr_jffi_benchmark_IntAddressArgIntArgs.c \
 jnr_jffi_benchmark_IntAddressArgLongArgs.c \
 jnr_jffi_benchmark_IntAddressFieldIntArgs.c \
 jnr_jffi_benchmark_IntAddressFieldLongArgs.c \
 jnr_jffi_benchmark_LongAddressArgIntArgs.c \
 jnr_jffi_benchmark_LongAddressArgLongArgs.c \
 jnr_jffi_benchmark_LongAddressFieldIntArgs.c \
 jnr_jffi_benchmark_LongAddressFieldLongArgs.c

